--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,11 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
-actix-web = "=4.0.0-beta.8"
-actix-http = "=3.0.0-beta.9"
+actix-web = "=4.0.0-rc.2"
+actix-http = "=3.0.0-rc.1"
+secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"]}
+serde-aux = "3"
 config = "0.11.0"
 uuid = { version = "0.8.1", features = ["v4"] }
 chrono = "0.4.15"
@@ -22,13 +24,17 @@ tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.2.6"
 tracing-log = "0.1.2"
-tracing-actix-web = "0.4.0-beta.8"
+tracing-actix-web = "0.5.0-rc.2"
+unicode-segmentation = "1"
+validator = "0.14"
 
 [dev-dependencies]
 actix-rt = "2"
 once_cell = "1.8.0"
 reqwest = "0.11"
 tokio = "1"
+claim = "0.5"
+fake = "~2.3"
 
 [dependencies.sqlx]
 version = "0.5.7"
